<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameListLabel"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/game_list"
        android:textAlignment="center"
        android:textSize="30sp"
        android:translationX="-40dp"
        android:translationY="50dp"
        app:layout_constraintBottom_toTopOf="@+id/chosenlevelLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/leaderboardLabelScore" />

    <TextView
        android:id="@+id/leaderboardLabelScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="166dp"
        android:text="@string/leaderboardtext"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Leaderboard" />

    <TextView
        android:id="@+id/chosenlevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="15dp"
        android:singleLine="true"
        android:text="@string/genre"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameListLabel" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="211dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="350dp"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenlevelLabel">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_names"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttons"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/game1"
                android:textColor="#000000" />

            <Button
                android:id="@+id/scoreButton"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/warofgamesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game3"
                android:textColor="#000000" />

            <Button
                android:id="@+id/scoreGame3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/karlsonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game4"
                android:textColor="#000000" />

            <Button
                android:id="@+id/scoreGame4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/boardGamesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:text="@string/boardgamesLabel"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="409dp"
        android:layout_height="211dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="#555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardGamesLabel">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_names"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/buttonsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttons"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/chessLabel"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:text="@string/Game5"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button6"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/checkersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkersLabel"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/GOLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goLabel"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/monopolyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monopolyLabel"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toGame"
                android:text="@string/go_to_score" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
