<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/toLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginBottom="10dp"
        android:onClick="toStart"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leaderBoardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="165dp"
        android:text="@string/leaderBoardLabel"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="163dp"
        android:text="@string/top_10_label"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardLabel" />

    <TextView
        android:id="@+id/chosenGameNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="178dp"
        android:text="@string/chosen_game_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="409dp"
        android:layout_height="556dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="#555555"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chosenGameNameLabel">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/level1Label"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:text="@string/level1Label"
                android:textColor="#000000" />

            <Button
                android:id="@+id/chooseGameButton"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:onClick="toLevel"
                android:text="@string/choose_level"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/level2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level2Label"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toLevel"
                android:text="@string/choose_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level3Label"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toLevel"
                android:text="@string/choose_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/level4Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level4Label"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toLevel"
                android:text="@string/choose_level" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#808080">

            <TextView
                android:id="@+id/level5Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level5Label"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toLevel"
                android:text="@string/choose_level" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>